--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div id="game">
+       <div id="game">
+   <div id= "stats"></div>
+   <div id= "controls"></div>
+   <div id= "monsterStats"></div>
+   <div id= "text"></div>
     </div>
   </body>
 </html>
