--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./styles.css">
     <title>RPG - Dragon Repeller</title>
-    <script src="./script.js"></script>
   </head>
   <body>
     <div id="game">
@@ -22,5 +21,6 @@
    <div id= "monsterStats"></div>
    <div id= "text"></div>
     </div>
+      <script src="./gamefile.js"></script>
   </body>
 </html>
