--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
          <button id="button1">Go to store</button>
 <button id="button2">Go to cave</button>
 <button id="button3">Fight dragon</button>
-   <div id= "monsterStats"></div>
+<div id="monsterStats">
+    <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
+    <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
+</div>
+   </div>
    <div id= "text"></div>
     </div>
       <script src="./gamefile.js"></script>
